--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
+    "husky": "^9.1.7",
     "typescript": "^5.9.2"
+  },
+  "scripts": {
+    "prepare": "husky"
   }
 }
